--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,21 @@
 <!doctype html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <title>Tvmaze</title>
-  <base href="/">
-
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <base href="/">
+  <title>TV Maze</title>
+  <style>
+    h1 {
+      margin: 0.2em 0;
+      border-bottom: 5px solid;
+      margin-bottom: 15px;
+      padding-bottom: 5px;
+    }
+  </style>
 </head>
 <body>
-  <app-root>Loading...</app-root>
+  <tvmaze-root>Loading...</tvmaze-root>
 </body>
 </html>
+
